trunk/Archive2/c4/462e33eefe7270/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:16:2: error: ‘frztz’ was not declared in this scope
 {frztz
  ^
main.cpp:17:5: error: expected ‘;’ before ‘std’
     std::vector<std::string> words = {
     ^
main.cpp:20:18: error: ‘words’ was not declared in this scope
     std::cout << words << std::endl;
                  ^
